# capnp-tests

./: CMakeLists.txt  README.md  addressbook.capnp.c++  addressbook.capnp.h  dynamic_json_test.cpp  dynamic_mmap_in_out_test.cpp  dynamic_mmap_test.cpp  dynamic_test.cpp  dynamic_test_stdout.cpp  dynamic_write_test.cpp  json-to-capnp.hpp
